--- a/Aufgabe 2/a) favorite place/style.css
+++ b/Aufgabe 2/a) favorite place/style.css
@@ -1,4 +1,63 @@
+body {
+	margin-left: 200px;	
+	font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+
+}
+
 p {
 	width: 900px;
-	color: #080F07;
+	color: #7F7F81;
+	text-align: justify;
+	margin-top: 30px;
+	margin-bottom: 60px;
+	word-spacing: 5px;
+	line-height: 30px;
+}
+
+table {
+	padding: 6px;
+	margin-left: 5px;
+	margin-right: 5px;
+	margin-bottom: 20px;
+	border-top: 1px solid #CCC2A9;
+	border-bottom: 1px solid #CCC2A9;
+	width: 890px;
+}
+
+img {
+	width: 900px;
+	height: 550px;
+}
+
+h1 {
+	color: #45121D;
+}
+
+.greybox {
+	background-color: #EEEBEC;
+	margin-left: -200px;
+	padding-top: 40px;
+	height: 300px;
+}
+
+.bottom {
+	margin-left: 200px;
+	border: 0px;
+	text-align: left;
+}
+
+.dark {
+	background-color: #CCCCCC;	
+}
+
+.grey {
+	background-color: #E4E4E4;
+}
+
+.second {
+	text-align: right;
+}
+
+.red {
+	color: #AD1443;
 }
