--- a/Aufgabe 1/style.css
+++ b/Aufgabe 1/style.css
@@ -1,5 +1,6 @@
 body {
-	margin-left: 200px;	
+	margin-left: 20%;
+	margin-right: 20%;	
 	font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
 
 }
@@ -34,16 +35,16 @@ h1 {
 }
 
 .greybox {
-	background-color: #EEEBEC;
-	margin-left: -200px;
-	padding-top: 40px;
-	height: 300px;
+    background-color: #EEEBEC;
+    height: 200px;
+    padding-top: 40px;
+    width: 900px;
 }
 
 .bottom {
-	margin-left: 200px;
-	border: 0px;
-	text-align: left;
+    border: 0 none;
+    margin-left: 6px;
+    text-align: left;
 }
 
 .dark {
