--- a/herbstfest/c/style.css
+++ b/herbstfest/c/style.css
@@ -22,18 +22,157 @@ html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address
 
 /* @end */
 
-/* hier die CSS-Angabe für allgemein */
 
-body {
-	font: 14px,/1.5 Georgia, serif;
-	color: rgb (81, 81, 81);
-	border-top: 5px solid rgb(40, 40, 40);
-}
+
+
+/* allgemeine CSS Angaben */
+
 
 h1 {
 	font-family: Impact;
 	font-size: 300%;
+}  
+
+
+h2 {
+	font-family: Impact;
+	font-size: 150%;
+	color: #7A7A7A;
 }
+
+
+p {
+	font-family: Georgia;
+	font-size: 14px;
+	line-height: 1.5;
+} 
+
+a:link {
+	text-decoration: none;
+}
+
+a:visited {
+	color: #C9CDFC;
+}
+
+/* @end */ 
+
+
+
+
+/* hier die CSS-Angaben für ganz schmal */
+@media only screen and (min-width: 340px) {
+	
+	body {
+	margin-left: 30px;
+	}
+	
+	header h1 {
+    color: rgba(0, 0, 0, 0.5);
+    margin-left: 10px;
+    margin-top: -55px;
+}
+	
+	header img {
+	padding-top: 20px
+}
+
+	h2 {
+	margin-bottom: 20px;	
+}
+	
+	aside {
+    color: #515151;
+    font-family: georgia;
+    font-size: 14px;
+    line-height: 1.5;
+    margin-right: auto;
+    padding-top: 10px;
+    width: 470px;
+    }
+
+	#wrap a:link {
+    background-color: #6059C9;
+    color: #C9CDFC;
+    float: left;
+    font-size: 120%;
+    margin-bottom: 20px;
+    margin-top: 30px;
+    padding: 10px 38px 10px 20px;
+    
+    /* TODO text align to the left */
+}
+
+
+	figure {
+    border-top: 3px double #E9E5E4;
+    padding-top: 20px;
+    width: 480px;
+}
+	
+	
+	figure img {
+    border-color: #E9E5E4;
+    border-style: solid;
+    border-width: 10px;
+    width: 460px;
+}
+
+	figcaption {
+    background: none repeat scroll 0 0 #E9E5E4;
+    border-color: #E9E5E4;
+    border-width: 10px;
+    color: #7A7A7A;
+    font-size: 120%;
+    margin-bottom: 20px;
+    margin-top: -10px;
+    padding-bottom: 10px;
+    padding-top: 5px;
+    text-align: center;
+    width: 480px;
+}
+
+	p {
+	width: 430px;
+	padding-bottom: 20px;
+}
+
+ 
+ 
+	
+	
+}   /* @end */
+
+
+
+
+/* hier die CSS-Angaben für die mittlere Größe */
+@media only screen and (min-width: 570px) {
+	
+	
+	
+	
+}  /* @end */
+
+
+        
+
+/* hier die CSS-Angaben für große Bildschirme */
+@media only screen and (min-width: 768px) {
+
+
+
+
+}  /* @end */
+
+
+
+
+
+
+
+/* hier die CSS-Angabe für allgemein
+
 
 h2 {
 	margin-left: 300px;
@@ -80,30 +219,5 @@ nav {
 .figcaption {
 	float: left;
 }
+/*
 
-
-
-
-
-
-
-
-/* hier die CSS-Angaben für ganz schmal */
-
-@media only screen and (min-width: 570px) {
-
-/* hier die CSS-Angaben für die mittlere Größe */
-
-	body {
-		padding: 20px;
-	}
-
-} /* 570px */
-
-@media only screen and (min-width: 768px) {
-
-/* hier die CSS-Angaben für große Bildschirme */
-	body {
-		padding: 46px;
-	}
-} /* 768px */
