--- a/herbstfest/c/style.css
+++ b/herbstfest/c/style.css
@@ -266,40 +266,44 @@ a:visited {
     margin-left: 10px;
     margin-top: -55px;
     font-size: 300%;
-}
+	}
 	
 	header img {
-	padding-top: 20px;
-	margin-right: 30px;
-	width: 1000px;
+    float: none;
+    margin-right: 30px;
+    padding-top: 20px;
+    width: 1400px;
+	}
+	 
+h2 {
+    margin-bottom: 20px;
+    margin-left: 1030px;
+    margin-top: 0;
+    padding-left: 20px;
+    width: 330px;
 }
- 
-	h2 {
-	margin-bottom: 20px;
-	margin-left: 520px;	
-}
-	
-	aside {    
+		
+aside {
+    background-color: #FF0000;
     color: #515151;
-    background-color:red;
     font-family: georgia;
-    font-size: 14px;
+    font-size: 22px;
     line-height: 1.5;
-    margin-bottom: 120px;
-    margin-left: 500px;
-    margin-top: -245px;
+    margin-bottom: 283px;
+    margin-left: 790px;
+    margin-top: -472px;
     padding: 7px;
     text-align: right;
-    width: 217px;
-	
-	/* TODO Opacity für hintergrund */
+    width: 523px;
 }
 
-	li {
-		width: 500px;
-	}
-
-	#wrap a:link {
+ul {
+    float: left;
+    margin-bottom: -60px;
+    margin-top: 60px;
+}
+	
+#wrap a:link {
     background-color: #6059C9;
     color: #C9CDFC;
     font-size: 120%;
@@ -310,23 +314,23 @@ a:visited {
     /* TODO text align to the left */
 }
 
-
-	figure {
+figure {
     border-top: 3px double #E9E5E4;
+    margin-left: 0;
     padding-top: 20px;
-    width: 730px;
+    width: 1400px;
 }
 	
-	
-	figure img {
+figure img {
     border-color: #E9E5E4;
     border-style: solid;
     border-width: 10px;
-    width: 480px;
     float: left;
+    margin-left: 530px;
+    width: 480px;
 }
 
-	figcaption {
+figcaption {
     background: none repeat scroll 0 0 #E9E5E4;
     border-color: #E9E5E4;
     border-width: 10px;
@@ -334,6 +338,7 @@ a:visited {
     font-size: 120%;
     margin-bottom: 20px;
     margin-top: -10px;
+    margin-left: 530px;
     padding-bottom: 10px;
     padding-top: 5px;
     text-align: center;
@@ -341,13 +346,15 @@ a:visited {
     float: left;
 }
 
-	p {
+
+p {
+    margin-left: 1030px;
     padding-bottom: 20px;
-    padding-left: 520px;
+    padding-left: 20px;
     padding-right: 30px;
-    width: 230	
+    width: 350px;
+}
 
-
-}  /* @end */
+/* @end */	
 
 
