--- a/herbstfest/c/style.css
+++ b/herbstfest/c/style.css
@@ -34,6 +34,7 @@ html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address
 h1 {
 	font-family: Impact;
 	font-size: 300%;
+	text-transform: uppercase;
 }  
 
 
@@ -159,9 +160,8 @@ a:visited {
 	}
 	
 	header h1 {
-    margin-bottom: 20px;
     margin-left: 10px;
-    width: 310px;
+    width: 340px;
 }
 	
 	header img {
@@ -175,24 +175,23 @@ a:visited {
 	margin-left: 520px;	
 }
 	
-	aside {    
+aside {
+    background-color: rgba(255, 255, 255, 0.5);
     color: #515151;
-    background-color:red;
     font-family: georgia;
     font-size: 14px;
     line-height: 1.5;
-    margin-bottom: 120px;
     margin-left: 500px;
     margin-top: -245px;
     padding: 7px;
+    position: absolute;
     text-align: right;
     width: 200px;
-	
-	/* TODO Opacity für hintergrund */
 }
 
 	li {
 		width: 500px;
+		margin-top: -27px;
 	}
 
 	#wrap a:link {
@@ -261,19 +260,21 @@ a:visited {
 	width: 900px;	
 	}
 	
-	header h1 {
+header h1 {
     color: rgba(0, 0, 0, 0.5);
-    margin-left: 10px;
-    margin-top: -55px;
     font-size: 300%;
-	}
-	
-	header img {
+    margin-bottom: -57px;
+    margin-left: 10px;
+    margin-top: 50px;
+    width: 340px;
+}	
+header img {
     float: none;
+    margin-bottom: -110px;
     margin-right: 30px;
     padding-top: 20px;
     width: 1400px;
-	}
+}
 	 
 h2 {
     margin-bottom: 20px;
@@ -284,15 +285,16 @@ h2 {
 }
 		
 aside {
-    background-color: #FF0000;
+    background-color: rgba(255, 255, 255, 0.5);
     color: #515151;
     font-family: georgia;
     font-size: 22px;
     line-height: 1.5;
-    margin-bottom: 283px;
-    margin-left: 790px;
-    margin-top: -472px;
+    margin-bottom: 0;
+    margin-left: 830px;
+    margin-top: -380px;
     padding: 7px;
+    position: absolute;
     text-align: right;
     width: 523px;
 }
