--- a/herbstfest/c/style.css
+++ b/herbstfest/c/style.css
@@ -153,24 +153,24 @@ a:visited {
 
 
 /* hier die CSS-Angaben für die mittlere Größe */
-@media only screen and (min-width: 670px) {
+@media only screen and (min-width: 640px) {
 	
-	body {
+body {
 	width: 730px;
 	}
 	
-	header h1 {
+header h1 {
     margin-left: 10px;
     width: 340px;
 }
 	
-	header img {
+header img {
 	padding-top: 20px;
 	margin-right: 30px;
 	width: 730px;
 }
  
-	h2 {
+h2 {
 	margin-bottom: 20px;
 	margin-left: 520px;	
 }
@@ -189,12 +189,11 @@ aside {
     width: 200px;
 }
 
-	li {
-		width: 500px;
+li {
 		margin-top: -27px;
 	}
-
-	#wrap a:link {
+	
+#wrap a:link {
     background-color: #6059C9;
     color: #C9CDFC;
     font-size: 120%;
@@ -206,14 +205,14 @@ aside {
 }
 
 
-	figure {
+figure {
     border-top: 3px double #E9E5E4;
     padding-top: 20px;
     width: 730px;
 }
 	
 	
-	figure img {
+figure img {
     border-color: #E9E5E4;
     border-style: solid;
     border-width: 10px;
@@ -221,7 +220,7 @@ aside {
     float: left;
 }
 
-	figcaption {
+figcaption {
     background: none repeat scroll 0 0 #E9E5E4;
     border-color: #E9E5E4;
     border-width: 10px;
@@ -236,7 +235,7 @@ aside {
     float: left;
 }
 
-	p {
+p {
     padding-bottom: 20px;
     padding-left: 520px;
     padding-right: 30px;
@@ -254,9 +253,9 @@ aside {
         
 
 /* hier die CSS-Angaben für große Bildschirme */
-@media only screen and (min-width: 1000px) {
+@media only screen and (min-width: 1024px) {
 	
-	body {
+body {
 	width: 900px;	
 	}
 	
@@ -265,12 +264,14 @@ header h1 {
     font-size: 300%;
     margin-bottom: -57px;
     margin-left: 10px;
-    margin-top: 50px;
+    margin-top: -49px;
+    position: absolute;
     width: 340px;
 }	
+
 header img {
     float: none;
-    margin-bottom: -110px;
+    margin-bottom: -7px;
     margin-right: 30px;
     padding-top: 20px;
     width: 1400px;
@@ -301,19 +302,17 @@ aside {
 
 ul {
     float: left;
-    margin-bottom: -60px;
-    margin-top: 60px;
+    margin-top: 67px;
+    position: absolute;
 }
 	
 #wrap a:link {
     background-color: #6059C9;
     color: #C9CDFC;
     font-size: 120%;
-    margin-bottom: 20px;
-    margin-top: 30px;
-    padding: 10px 38px 10px 20px;
-    
-    /* TODO text align to the left */
+    margin-left: 20px;
+    margin-top: -17px;
+    width: 430px;
 }
 
 figure {
