--- a/herbstfest/c/style.css
+++ b/herbstfest/c/style.css
@@ -26,10 +26,17 @@ html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address
 
 
 /* allgemeine CSS Angaben */
-	body {
-	padding-top: 20px;
-	}
+body {
+    margin-left: 20px;
+    margin-right: 20px;
+    padding-top: 40px;
+}
 
+header img {
+	padding-top: 20px;
+	margin-right: 30px;	
+	width: 100%;
+}
 
 h1 {
 	font-family: Impact;
@@ -65,7 +72,7 @@ a:visited {
 
 
 /* hier die CSS-Angaben für ganz schmal */
-@media only screen and (min-width: 0px) {
+@media only screen and (min-width: 320px) {
 	
 	body {
     margin-left: 10px;
@@ -80,7 +87,6 @@ a:visited {
 	
 	header img {
 	padding-top: 20px
-	width: 480px;
 }
  
 	h2 {
@@ -94,7 +100,7 @@ a:visited {
     line-height: 1.5;
     margin-right: auto;
     padding-top: 10px;
-    width: 470px;
+
     }
 
 	#wrap a:link {
@@ -113,7 +119,6 @@ a:visited {
 	figure {
     border-top: 3px double #E9E5E4;
     padding-top: 20px;
-    width: 480px;
 }
 	
 	
@@ -121,7 +126,7 @@ a:visited {
     border-color: #E9E5E4;
     border-style: solid;
     border-width: 10px;
-    width: 460px;
+
 }
 
 	figcaption {
@@ -135,15 +140,17 @@ a:visited {
     padding-bottom: 10px;
     padding-top: 5px;
     text-align: center;
-    width: 480px;
+	width: 340px;
 }
 
 	p {
-	width: 430px;
 	padding-bottom: 20px;
 }
 
- 
+nav {
+    background-color: #6059C9;
+
+}
  
 	
 	
@@ -155,24 +162,21 @@ a:visited {
 /* hier die CSS-Angaben für die mittlere Größe */
 @media only screen and (min-width: 640px) {
 	
-body {
-	width: 730px;
-	}
-	
+	body {
+	padding-top: 40px;
+}	
 header h1 {
     margin-left: 10px;
-    width: 340px;
 }
 	
 header img {
 	padding-top: 20px;
 	margin-right: 30px;
-	width: 730px;
 }
  
 h2 {
-	margin-bottom: 20px;
-	margin-left: 520px;	
+    margin-bottom: 20px;
+    margin-left: 370px;
 }
 	
 aside {
@@ -181,16 +185,16 @@ aside {
     font-family: georgia;
     font-size: 14px;
     line-height: 1.5;
-    margin-left: 500px;
-    margin-top: -245px;
+    margin-left: 450px;
+    margin-right: 30px;
+    margin-top: -232px;
     padding: 7px;
     position: absolute;
     text-align: right;
-    width: 200px;
 }
 
 li {
-		margin-top: -27px;
+	margin-top: -27px;
 	}
 	
 #wrap a:link {
@@ -208,7 +212,6 @@ li {
 figure {
     border-top: 3px double #E9E5E4;
     padding-top: 20px;
-    width: 730px;
 }
 	
 	
@@ -216,35 +219,31 @@ figure img {
     border-color: #E9E5E4;
     border-style: solid;
     border-width: 10px;
-    width: 480px;
     float: left;
 }
-
 figcaption {
     background: none repeat scroll 0 0 #E9E5E4;
     border-color: #E9E5E4;
     border-width: 10px;
     color: #7A7A7A;
+    float: left;
     font-size: 120%;
-    margin-bottom: 20px;
-    margin-top: -10px;
+    margin-left: -340px;
+    margin-top: 260px;
     padding-bottom: 10px;
     padding-top: 5px;
     text-align: center;
-    width: 500px;
-    float: left;
 }
 
 p {
     padding-bottom: 20px;
-    padding-left: 520px;
-    padding-right: 30px;
-    width: 240px;
+    padding-left: 370px;
+    padding-right: 14px;
 }
 
-
-
-	
+nav {
+    background-color: #6059C9;
+}
 	
 	
 }  /* @end */
@@ -255,10 +254,9 @@ p {
 /* hier die CSS-Angaben für große Bildschirme */
 @media only screen and (min-width: 1024px) {
 	
-body {
-	width: 900px;	
-	}
-	
+	body {
+	padding-top: 60px;
+}	
 header h1 {
     color: rgba(0, 0, 0, 0.5);
     font-size: 300%;
@@ -266,7 +264,6 @@ header h1 {
     margin-left: 10px;
     margin-top: -49px;
     position: absolute;
-    width: 340px;
 }	
 
 header img {
@@ -274,15 +271,13 @@ header img {
     margin-bottom: -7px;
     margin-right: 30px;
     padding-top: 20px;
-    width: 1400px;
 }
 	 
 h2 {
     margin-bottom: 20px;
-    margin-left: 1030px;
+    margin-left: 640px;
     margin-top: 0;
     padding-left: 20px;
-    width: 330px;
 }
 		
 aside {
@@ -297,7 +292,6 @@ aside {
     padding: 7px;
     position: absolute;
     text-align: right;
-    width: 523px;
 }
 
 ul {
@@ -312,14 +306,12 @@ ul {
     font-size: 120%;
     margin-left: 20px;
     margin-top: -17px;
-    width: 430px;
 }
 
 figure {
     border-top: 3px double #E9E5E4;
     margin-left: 0;
     padding-top: 20px;
-    width: 1400px;
 }
 	
 figure img {
@@ -327,8 +319,7 @@ figure img {
     border-style: solid;
     border-width: 10px;
     float: left;
-    margin-left: 530px;
-    width: 480px;
+    margin-left: 300px;
 }
 
 figcaption {
@@ -336,24 +327,21 @@ figcaption {
     border-color: #E9E5E4;
     border-width: 10px;
     color: #7A7A7A;
+    float: left;
     font-size: 120%;
     margin-bottom: 20px;
-    margin-top: -10px;
-    margin-left: 530px;
-    padding-bottom: 10px;
+    margin-left: -340px;
+    margin-top: 260px;
+    padding-bottom: 0;
     padding-top: 5px;
     text-align: center;
-    width: 500px;
-    float: left;
 }
 
-
 p {
-    margin-left: 1030px;
+    margin-left: 640px;
     padding-bottom: 20px;
     padding-left: 20px;
     padding-right: 30px;
-    width: 350px;
 }
 
 /* @end */	
