--- a/herbstfest/c/style.css
+++ b/herbstfest/c/style.css
@@ -72,7 +72,7 @@ a:visited {
 
 
 /* hier die CSS-Angaben für ganz schmal */
-@media only screen and (min-width: 320px) {
+@media only screen and (min-width: 0px) {
 	
 	body {
     margin-left: 10px;
@@ -103,16 +103,15 @@ a:visited {
 
     }
 
-	#wrap a:link {
+nav {
     background-color: #6059C9;
-    color: #C9CDFC;
-    float: left;
-    font-size: 120%;
     margin-bottom: 20px;
-    margin-top: 30px;
-    padding: 10px 38px 10px 20px;
-    
-    /* TODO text align to the left */
+    margin-top: 15px;
+}
+
+li {
+    float: left;
+    padding: 10px;
 }
 
 
@@ -190,21 +189,16 @@ aside {
     text-align: right;
 }
 
-li {
-	margin-top: -27px;
-	}
-	
-#wrap a:link {
+nav {
     background-color: #6059C9;
-    color: #C9CDFC;
-    font-size: 120%;
     margin-bottom: 20px;
-    margin-top: 30px;
-    padding: 10px 38px 10px 20px;
-    
-    /* TODO text align to the left */
+    margin-top: 3px;
 }
 
+li {
+    float: left;
+    padding: 10px;
+}
 
 figure {
     border-top: 3px double #E9E5E4;
@@ -264,12 +258,11 @@ header img {
     float: none;
     margin-bottom: -7px;
     margin-right: 30px;
-    padding-top: 20px;
 }
 	 
 h2 {
     margin-bottom: 20px;
-    margin-left: 640px;
+    margin-left: 800px;
     margin-top: 0;
     padding-left: 20px;
 }
@@ -288,18 +281,20 @@ aside {
     text-align: right;
 }
 
-ul {
-    float: left;
-    margin-top: 67px;
+nav {
+    background-color: #FFFFFF;
+    float: none;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    width: 30%;
     position: absolute;
 }
-	
-#wrap a:link {
+
+li {
+    padding: 10px;
+    float: none;
     background-color: #6059C9;
-    color: #C9CDFC;
-    font-size: 120%;
-    margin-left: 20px;
-    margin-top: -17px;
+	margin-top: 3px;
 }
 
 figure {
@@ -313,7 +308,7 @@ figure img {
     border-style: solid;
     border-width: 10px;
     float: left;
-    margin-left: 300px;
+    margin-left: 460px;
 }
 
 figcaption {
@@ -332,11 +327,13 @@ figcaption {
 }
 
 p {
-    margin-left: 640px;
+    margin-left: 800px;
     padding-bottom: 20px;
     padding-left: 20px;
     padding-right: 30px;
 }
+
+
 
 /* @end */	
 
