delete buttong passt

--- a/mini-todo/base.css
+++ b/mini-todo/base.css
@@ -256,7 +256,7 @@ label[for='toggle-all'] {
 }
 
 #todo-list li .destroy {
-	display: none;
+	display: block;
 	position: absolute;
 	top: 0;
 	right: 10px;
